--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
               <div class="card-body p60 pt100">
                 <h3>Who am I ?</h3>
                 <h5 class="mt25">Machine Learning Researcher | Data Scientist</h5>
-                <p class="mt-20">I am currently working with Coriolis Technologies Pvt Ltd. I had developed and maintained the number of applications in Coriolis such as License plate recognition engine, SOAP-API client in C, AMI automation tool for AWS CLI, Orchestration tool for Puppet, Chef &amp;  Ansible written in Ruby On Rails.</p>
-                <p class="mt-20">Other than active development on daily basis, my responsibilities here at Coriolis includes working as Scrum master, leading the small team of Developer and QA members.</p>
+                <p class="mt-20">I am currently working with Mindstix Software Labs as Data Scientist. At Mindstix I am working on Recommendation Engines</p>
+                <p class="mt-20">Previously I was working with Coriolis Technologies Pvt Ltd. I have developed and maintained the number of applications in Coriolis such as License plate recognition engine, SOAP-API client in C, AMI automation tool for AWS CLI, Orchestration tool for Puppet, Chef &amp;  Ansible written in Ruby On Rails.</p>
+                <p class="mt-20">Other than development, my responsibilities at Coriolis includes working as Scrum master, leading the small team of Developer and QA members.</p>
                 <p class="mt-20">My area of research is  Artificial general intelligence(AGI). I am working on an application of reinforcement learning to create a Cognitive systems.</p>
                 <button class="btn btn-outline-danger mt30" type="button" onclick="location.href='./resume/resume.pdf';"><i class="icon-down-circled2 " ></i>Download CV</button>
               </div>
