--- a/index.html
+++ b/index.html
@@ -215,7 +215,13 @@
                 </div>
               </div>
               <div class="card-body pt20 pl40 pr50">
-                <h6 class="title text-danger">2017 - NOW</h6>
+                <h6 class="title text-danger">2018 - PRESENT</h6>
+                <P><strong>Machine Learning Development</strong></P>
+                <P class="subtitle">Real Time Recommendation Engine for Retail Clients</P>
+                <P class="subtitle">RASA NLU based Chatbot application</P>
+                <P class="subtitle">Graph Based Recommendation Engine</P>
+                <hr>
+                <h6 class="title text-danger">2017 - 2018</h6>
                 <P><strong>Rails Development</strong></P>
                 <P class="subtitle">Created REST API for orchestration using Chef, Puppet &amp; Ansible Configuration Manager</P>
                 <P class="subtitle">Created REST client using Golang for specific use case</P>
@@ -295,35 +301,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header pt30 pl40 pr50">
-                <div class="pull-left">
-                  <h4>Courses</h4>
-                  <span class="line"></span>  
-                </div>
-                <div class="pull-right">
-                  <i class="icon-graduation font45 text-gray-600"></i> 
-                </div>
-              </div>
-              <div class="card-body pt20 pl40 pr50">
-                <ul class="mt25 info list-unstyled">
-                  <li><a href="https://www.coursera.org/account/accomplishments/certificate/2KKVL2XQWEST" style="color:#7C7A74">Neural Networks and Deep Learning by deeplearning.ai on Coursera</a></li>
-                  <li><a href="https://www.coursera.org/account/accomplishments/certificate/9UP9DFNML83E" style="color:#7C7A74">Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization by deeplearning.ai on Coursera</a></li>
-                  <li><a href="https://www.coursera.org/account/accomplishments/certificate/8HFMY6CMAZJT" style="color:#7C7A74">Structuring Machine Learning Projects by deeplearning.ai on Coursera</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-JNF8WDJ3.jpg" style="color:#7C7A74">Artificial Intelligence A-Z Learn How To Build An AI on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-ZQ9N6RFK.jpg" style="color:#7C7A74">Deep Learning A-Z Hands-On Artificial Neural Networks on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-IDCI6HG6.jpg" style="color:#7C7A74">Practical Deep Learning with PyTorch on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-WWQ55J9U.jpg" style="color:#7C7A74">Machine Learning A-Z Hands-On Python &amp; R In Data Science on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-VL1NUDT3.jpg" style="color:#7C7A74">The Complete Ruby on Rails Developer Course on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-4MEXYP0T.jpg" style="color:#7C7A74">Workshop in Probability and Statistics on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-5OTZ69O7.jpg" style="color:#7C7A74">Swift 4 Language, A Complete Overview With IOS 11 CoreML App on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-JNF8WDJ3.jpg" style="color:#7C7A74">Complete Guide to TensorFlow for Deep Learning with Python on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-DZXNKN6C.jpg" style="color:#7C7A74">Deep Learning and NLP A-Z™: How to create a ChatBot on Udemy</a></li>
-                </ul>
-              </div>
-            </div>
             <div class="card">
               <div class="card-header pt30 pl40 pr50">
                 <div class="pull-left">
@@ -353,6 +330,40 @@
                   </div> -->
               </div>
             </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-header pt30 pl40 pr50">
+                <div class="pull-left">
+                  <h4>Courses</h4>
+                  <span class="line"></span>  
+                </div>
+                <div class="pull-right">
+                  <i class="icon-graduation font45 text-gray-600"></i> 
+                </div>
+              </div>
+              <div class="card-body pt20 pl40 pr50">
+                <ul class="mt25 info list-unstyled">
+                  <li><a href="https://www.coursera.org/account/accomplishments/certificate/2KKVL2XQWEST" style="color:#7C7A74">Neural Networks and Deep Learning by deeplearning.ai on Coursera</a></li>
+                  <li><a href="https://www.coursera.org/account/accomplishments/certificate/9UP9DFNML83E" style="color:#7C7A74">Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization by deeplearning.ai on Coursera</a></li>
+                  <li><a href="https://www.coursera.org/account/accomplishments/certificate/8HFMY6CMAZJT" style="color:#7C7A74">Structuring Machine Learning Projects by deeplearning.ai on Coursera</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-JNF8WDJ3.jpg" style="color:#7C7A74">Artificial Intelligence A-Z Learn How To Build An AI on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-ZQ9N6RFK.jpg" style="color:#7C7A74">Deep Learning A-Z Hands-On Artificial Neural Networks on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-IDCI6HG6.jpg" style="color:#7C7A74">Practical Deep Learning with PyTorch on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-WWQ55J9U.jpg" style="color:#7C7A74">Machine Learning A-Z Hands-On Python &amp; R In Data Science on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-VL1NUDT3.jpg" style="color:#7C7A74">The Complete Ruby on Rails Developer Course on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-4MEXYP0T.jpg" style="color:#7C7A74">Workshop in Probability and Statistics on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-5OTZ69O7.jpg" style="color:#7C7A74">Swift 4 Language, A Complete Overview With IOS 11 CoreML App on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-JNF8WDJ3.jpg" style="color:#7C7A74">Complete Guide to TensorFlow for Deep Learning with Python on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-DZXNKN6C.jpg" style="color:#7C7A74">Deep Learning and NLP A-Z™: How to create a ChatBot on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-JNF8WDJ3.jpg" style="color:#7C7A74">Complete Guide to TensorFlow for Deep Learning with Python on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-4MEXYP0T.jpg" style="color:#7C7A74">Workshop in Probability and Statistics on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-HLY5ZMG4.jpg" style="color:#7C7A74">Building Practical Recommendation Engines on Udemy</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-1A6FUKEH.jpg" style="color:#7C7A74">ChatBots: Messenger ChatBot - DialogFlow and nodejs on Udemy</a></li>
+                </ul>
+              </div>
+            </div>
+
           </div>
         </div>
         <div class="row mb50 bg-dark p-container text-light pt60 pb60 text-center">
