adding new courses

--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
               <div class="card-header pt30 pl40 pr50">
                 <div class="pull-left">
                   <h4>Expertise</h4>
-                  <span class="line"></span>  
+                  <span class="line"></span>
                 </div>
                 <div class="pull-right">
-                  <i class="icon-briefcase font45 text-gray-600"></i> 
+                  <i class="icon-briefcase font45 text-gray-600"></i>
                 </div>
               </div>
               <div class="card-body pt20 pl40 pr50">
@@ -248,10 +248,10 @@
               <div class="card-header pt30 pl40 pr50">
                 <div class="pull-left">
                   <h4>Education</h4>
-                  <span class="line"></span>  
+                  <span class="line"></span>
                 </div>
                 <div class="pull-right">
-                  <i class="icon-graduation font45 text-gray-600"></i> 
+                  <i class="icon-graduation font45 text-gray-600"></i>
                 </div>
               </div>
               <div class="card-body pt20 pl40 pr50">
@@ -272,10 +272,10 @@
               <div class="card-header pt30 pl40 pr50">
                 <div class="pull-left">
                   <h4>Skills</h4>
-                  <span class="line"></span>  
+                  <span class="line"></span>
                 </div>
                 <div class="pull-right">
-                  <i class="icon-chart font45 text-gray-600"></i> 
+                  <i class="icon-chart font45 text-gray-600"></i>
                 </div>
               </div>
               <div class="card-body pt20 pl40 pr50">
@@ -305,10 +305,10 @@
               <div class="card-header pt30 pl40 pr50">
                 <div class="pull-left">
                   <h4>Languages</h4>
-                  <span class="line"></span>  
+                  <span class="line"></span>
                 </div>
                 <div class="pull-right">
-                  <i class="icon-microphone font45 text-gray-600"></i> 
+                  <i class="icon-microphone font45 text-gray-600"></i>
                 </div>
               </div>
               <div class="card-body pt20 pl40 pr50">
@@ -336,10 +336,10 @@
               <div class="card-header pt30 pl40 pr50">
                 <div class="pull-left">
                   <h4>Courses</h4>
-                  <span class="line"></span>  
+                  <span class="line"></span>
                 </div>
                 <div class="pull-right">
-                  <i class="icon-graduation font45 text-gray-600"></i> 
+                  <i class="icon-graduation font45 text-gray-600"></i>
                 </div>
               </div>
               <div class="card-body pt20 pl40 pr50">
@@ -360,6 +360,10 @@
                   <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-4MEXYP0T.jpg" style="color:#7C7A74">Workshop in Probability and Statistics on Udemy</a></li>
                   <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-HLY5ZMG4.jpg" style="color:#7C7A74">Building Practical Recommendation Engines on Udemy</a></li>
                   <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-1A6FUKEH.jpg" style="color:#7C7A74">ChatBots: Messenger ChatBot - DialogFlow and nodejs on Udemy</a></li>
+                  <li><a href="https://www.coursera.org/account/accomplishments/verify/6FCGVS4K7UPM" style="color:#7C7A74">Introduction to Recommender Systems: Non-Personalized and Content-Based on Coursera</a></li>
+                  <li><a href="https://www.coursera.org/account/accomplishments/verify/VNS3KJCDC53M" style="color:#7C7A74">Nearest Neighbor Collaborative Filtering on Coursera</a></li>
+                  <li><a href="https://www.coursera.org/account/accomplishments/verify/VSWTCNHFSA7K" style="color:#7C7A74">Recommender Systems: Evaluation and Metrics on Coursera</a></li>
+                  <li><a href="https://www.coursera.org/account/accomplishments/verify/D8W3TVJW3UVZ" style="color:#7C7A74">Matrix Factorization and Advanced Techniques on Coursera</a></li>
                 </ul>
               </div>
             </div>
@@ -629,7 +633,7 @@
           </div>
           <div class="col-12">
             <div class="row mb50">
-              <div class="col-md-4 blog-img-2"> 
+              <div class="col-md-4 blog-img-2">
               </div>
               <div class="col-md-8 border pt50 pl50 pb80">
                 <h2>Command Line REST API client in Golang</h2>
@@ -658,7 +662,7 @@
           </div>
           <div class="col-12">
             <div class="row mb50">
-              <div class="col-md-4 blog-img-1"> 
+              <div class="col-md-4 blog-img-1">
               </div>
               <div class="col-md-8 border pt50 pl50 pb80">
                 <h2>Real time Face Recognition Using Facenet</h2>
@@ -687,7 +691,7 @@
           </div>
           <div class="col-12">
             <div class="row mb50">
-              <div class="col-md-4 blog-img-4"> 
+              <div class="col-md-4 blog-img-4">
               </div>
               <div class="col-md-8 border pt50 pl50 pb80">
                 <h2>Indian Festival Recognition App</h2>
@@ -716,7 +720,7 @@
           </div>
           <div class="col-12">
             <div class="row mb50">
-              <div class="col-md-4 blog-img-3"> 
+              <div class="col-md-4 blog-img-3">
               </div>
               <div class="col-md-8 border pt50 pl50 pb80">
                 <h2>Handwritten digits classification Android App</h2>
@@ -805,7 +809,7 @@
           </div>
         </div>
         <div class="row bg-dark text-light font14  pl30 pt30 pb30 my-font">
-          &copy; <script>document.write(new Date().getFullYear())</script><i class="fa fa-heart text-danger pr5 pl5 pt3"></i> By <a href="http://ishwarsawale.com"><span class="text-danger pl5" title="Bootstrap 4 Themes and Dashboards">Ishwar Sawale</span></a> 
+          &copy; <script>document.write(new Date().getFullYear())</script><i class="fa fa-heart text-danger pr5 pl5 pt3"></i> By <a href="http://ishwarsawale.com"><span class="text-danger pl5" title="Bootstrap 4 Themes and Dashboards">Ishwar Sawale</span></a>
         </div>
       </div>
     </div>
