--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             <h2><span class="text-danger">Open Source</span> Projects</h2>
           </div>
           <div class="col-12">
-            <div class="row row-flex">
+            <div class="row">
               <div class="col-sm-6 col-lg-3 p5">
                 <div class="card text-center bg-light">
                   <div class="card-body">
