--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="card border border-right-0">
               <div class="card-body p60 pt100">
                 <h3>Personal Info</h3>
-                <p class="mt-20">I have completed Diploma in Big Data Analytics and Bachelor of Engineering from Univesity Of Pune.</p>
+                <p class="mt-20">I have completed Diploma in Big Data Analytics and Bachelor of Engineering from University Of Pune.</p>
                 <p class="mt-20">I am a quick learner and enthusiastic about learning new technologies. I am working with C, Python, Java, R, Kotlin, Bash, Go language for my development purpose.</p>
                 <p class="mt-20">I have also worked on some hobby projects such as developing apps in Kotlin for android platform, real-time image classification in an android app by training machine learning model on the server and recompiling it using TensorFlow for Android, another one is creating real-time face recognition using facenet as backend.</p>
                 <p class="mt-20">In my free time I like to work on interesting projects in Data Science domain. I also have completed courses related to Machine Learning, AI from Udemy, Coursera.</p>
