Adding new layout

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <h1 class="display-1 name font-weight-bold text-light wow fadeInLeft"data-wow-delay=".4s">Ishwar Sawale</h1>
             <p class="title wow fadeInUp" data-wow-delay=".8s">Machine Learning Researcher | Software Developer  | Data Scientist</p>
             <button class="btn btn-danger wow fadeIn" type="button" onclick="location.href='./resume/resume.pdf';"><i class="fa fa-print pr13"></i>PRINT RESUME</button>
+            <button class="btn btn-danger wow fadeIn" type="button" onclick="location.href='https://github.com/ishwarsawale/certification_list';"><i class="fa fa-certificate pr13"></i>CERTIFICATIONS</button>
+            <button class="btn btn-danger wow fadeIn" type="button" onclick="location.href='https://github.com/ishwarsawale/project_list';"><i class="fa fa-file-code-o pr13"></i>PROJECTS</button>
           </div>
         </div>
       </header>
@@ -216,6 +218,8 @@
             </div>
           </div>
         </div>
+        <div class="row mb5 bg-dark p-container text-light pt1 pb3 text-center">
+        </div> 
         <!--Resume Section-->
         <div class="row mb50 p-container" id="resume">
           <div class="col-12 mb40">
@@ -389,51 +393,7 @@
 
           </div>
         </div>
-        <div class="row mb50 bg-dark p-container text-light pt60 pb60 text-center">
-          <div class="col-sm-6 col-md-3">
-            <div class="row m-auto">
-              <div class="col-5 pt20 text-right">
-                <div class="m-auto"><i class="icon-clock font65"></i></div>
-              </div>
-              <div class="col-7 text-left border border-left border-secondary">
-                <h1 class="text-danger font-weight-bold m0 p0 font40">500</h1>
-                <p class="text-light">Hours Worked</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="row m-auto">
-              <div class="col-5 pt20 text-right">
-                <div class="m-auto"><i class="icon-layers font65"></i></div>
-              </div>
-              <div class="col-7 text-left border border-left border-secondary">
-                <h1 class="text-danger font-weight-bold m0 p0 font40">13</h1>
-                <p class="text-light">Project Finished</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="row m-auto">
-              <div class="col-5 pt20 text-right">
-                <div class="m-auto"><i class="icon-emotsmile font65"></i></div>
-              </div>
-              <div class="col-7 text-left border border-left border-secondary">
-                <h1 class="text-danger font-weight-bold m0 p0 font40">3</h1>
-                <p class="text-light">Happy Clients</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="row m-auto">
-              <div class="col-5 pt20 text-right">
-                <div class="m-auto"><i class="icon-cup font65"></i></div>
-              </div>
-              <div class="col-7 text-left border border-left border-secondary">
-                <h1 class="text-danger font-weight-bold m0 p0 font40">0</h1>
-                <p class="text-light">Coffee Drinked</p>
-              </div>
-            </div>
-          </div>
+        <div class="row mb5 bg-dark p-container text-light pt1 pb3 text-center">
         </div>
         <!--service section-->
         <div class="row mb50 p-container" id="service">
