--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h3>Who am I ?</h3>
                 <h5 class="mt25">Machine Learning Researcher | Data Scientist</h5>
                 <p class="mt-20">I am currently working with Mindstix Software Labs as Data Scientist.</p>
-                <p class="mt-20">At Mindstix I am working on <strong style="color: red;">Recommendation Engines</strong> for Retail. I have also created <strong style="color: red;">Chatbot</strong> based on RASA framework which then I integrated with Slack. I have also been working on <strong style="color: red;">Face Recognition System </strong> which is hybrid of Facenet and Dlib.</p>
+                <p class="mt-20">At Mindstix I am working as <strong style="color: red;">Computer Vision researcher</strong> for billion dollar client, who deals in beauty prodcuts. Previously I was working on <strong style="color: red;">Recommendation Engines</strong> for Retail. I have also developed <strong style="color: red;">Chatbot</strong> based on RASA framework which then I integrated with Slack and <strong style="color: red;">Face Recognition System </strong> which is hybrid of Facenet and Dlib.</p>
                 <p class="mt-20">Previously I was working with Coriolis Technologies Pvt Ltd. I have developed and maintained the number of applications in Coriolis such as License plate recognition engine, SOAP-API client in C, AMI automation tool for AWS CLI, Orchestration tool for Puppet, Chef &amp;  Ansible written in Ruby On Rails.</p>
                 <p class="mt-20">Other than development, my responsibilities at Coriolis includes working as Scrum master, leading the small team of Developer and QA members.</p>
                 <p class="mt-20">My area of research is  Artificial general intelligence(AGI). I am working on an application of reinforcement learning to create a Cognitive systems.</p>
@@ -237,8 +237,14 @@
                 </div>
               </div>
               <div class="card-body pt20 pl40 pr50">
-                <h6 class="title text-danger">2018 - PRESENT</h6>
+                <h6 class="title text-danger">2019 - present</h6>
+                <P><strong>Machine Learning Research & Development</strong></P>
+                <P class="subtitle">Colour Constancy Algorithm research for multi-ethnicity & different illumination condition for the client.</P>
+                <P class="subtitle">Question Answer based Chatbot system research & development, the bot can retrieve answers for users query from unstructured data of the website.</P>
+                <hr>
+                <h6 class="title text-danger">2018 - 2019</h6>
                 <P><strong>Machine Learning Development</strong></P>
+                <P class="subtitle">Colour Constancy Algorithm research & development</P>
                 <P class="subtitle">Implementing Real Time Recommendation Engine for Retail Clients which helps to drive revenu</P>
                 <P class="subtitle">Created Chatbot application and Integration using openc source framework RASA and integrated it with Slack for client</P>
                 <P class="subtitle">Implementing Graph Based Recommendation Engine, where User-User similarity based recommendations are provided</P>
