Adding new course

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
               </div>
               <div class="card-body pt20 pl40 pr50">
                 <ul class="mt25 info list-unstyled">
+                  <li><a href="https://gurus.pyimagesearch.com/certificates/?id=17225159" style="color:#7C7A74">PyImageSearch Gurus Graduate by PyImageSearch</a></li>
                   <li><a href="https://www.coursera.org/account/accomplishments/certificate/2KKVL2XQWEST" style="color:#7C7A74">Neural Networks and Deep Learning by deeplearning.ai on Coursera</a></li>
                   <li><a href="https://www.coursera.org/account/accomplishments/certificate/9UP9DFNML83E" style="color:#7C7A74">Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization by deeplearning.ai on Coursera</a></li>
                   <li><a href="https://www.coursera.org/account/accomplishments/certificate/8HFMY6CMAZJT" style="color:#7C7A74">Structuring Machine Learning Projects by deeplearning.ai on Coursera</a></li>
