--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
           </div>
         </div>
         <div class="row bg-dark text-light font14  pl30 pt30 pb30 my-font">
-          &copy; <script>document.write(new Date().getFullYear())</script><i class="fa fa-heart text-danger pr5 pl5 pt3"></i> By <a href="http://ishwarsawale.com"><span class="text-danger pl5" title="Bootstrap 4 Themes and Dashboards">Ishwar Sawale</span></a>
+          &copy; <script>document.write(new Date().getFullYear())</script><i class="fa fa-heart text-danger pr5 pl5 pt3"></i> By <a href="http://devcrud.com/"><span class="text-danger pl5" title="Bootstrap 4 Themes and Dashboards">DevCRUD</span></a>
         </div>
       </div>
     </div>
